us-west-1/services/backend/1-security-group/main.tf
provider "aws" {
  region = "us-west-1"
}


data "aws_vpc" "main" {
  default = true
}

resource "aws_security_group" "allow_tls" {
  name   = "AWS-PRAC-SEC"
  vpc_id = data.aws_vpc.main.id

  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "AWS-PRAC-SEC"
  }
}
